--- a/css/basic.css
+++ b/css/basic.css
@@ -1,13 +1,28 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;500&display=swap");
 /* Common */
-body {
-  text-align: left;
-  font-size: 14px;
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
   color: #555;
-  line-height: 1.6;
-  font-family: "Noto Sans KR", sans-serif;
+  font-size: 14px;
   font-weight: 300;
-  letter-spacing: -1px; }
+  font-family: "Noto Sans KR", sans-serif;
+  font: inherit;
+  box-sizing: border-box;
+  vertical-align: baseline; }
 
 @media all and (max-width: 1024px) {
   body {
@@ -16,38 +31,6 @@ body {
 @media all and (max-width: 768px) {
   body {
     font-size: 12px; } }
-
-body,
-div,
-dl,
-dt,
-dd,
-ul,
-ol,
-li,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-span,
-form,
-fieldset,
-p,
-button,
-address,
-table,
-tbody,
-tfoot,
-thead,
-th,
-tr,
-tdvideo,
-tt {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box; }
 
 header,
 article,
