--- a/css/common.css
+++ b/css/common.css
@@ -78,6 +78,25 @@ h5.title {
   border: 0 solid transparent;
   border-radius: .25rem; }
 
+/* 팝오버 */
+.btn-pop-over {
+  outline: none; }
+
+.pop-over {
+  opacity: 0;
+  padding: 0.75rem;
+  border: 1px solid #e2e2e2;
+  border-radius: 0.25rem;
+  background: #fff;
+  z-index: -1;
+  position: absolute;
+  box-shadow: 0px 0px 0.2rem 0 rgba(0, 0, 0, 0.2);
+  transition: all 0.2s; }
+
+.pop-over.on {
+  z-index: 1;
+  opacity: 1; }
+
 /* 리스트 스타일 */
 .li-style1.margin {
   margin: 0.5rem 0; }
@@ -325,6 +344,13 @@ p.line-30 {
 .btn-group .btn-basic:last-child {
   border-top-right-radius: 0.25rem;
   border-bottom-right-radius: 0.25rem; }
+
+.ic-arrow {
+  border: solid;
+  border-width: 0 2px 2px 0;
+  display: inline-block;
+  padding: 2px;
+  transform: rotate(45deg); }
 
 /* 기본 테이블 */
 .th-left tbody th {
