--- a/css/common.scss
+++ b/css/common.scss
@@ -66,6 +66,25 @@ h5.title{font-size: 1rem;font-weight: 500;color: $c-black;margin: 1rem 0 0.4rem 
   border-radius: .25rem;}
 
 
+/* 팝오버 */
+.btn-pop-over{outline: none;}
+.pop-over{
+  opacity: 0;
+  padding:0.75rem;border:1px solid $bd-color;
+  border-radius: 0.25rem;
+  background: #fff;
+  z-index: -1;
+  position: absolute;
+  box-shadow: 0px 0px 0.2rem 0 rgba(0,0,0,0.2);
+  transition: all 0.2s;
+  &.on{
+    z-index: 1;
+    opacity: 1;
+  }
+}
+
+
+
 /* 리스트 스타일 */
 .li-style1 {
   &.margin {
@@ -271,6 +290,14 @@ p.line-30 {
   .btn-basic:not(:last-child){border-radius: 0;}
   .btn-basic:first-child{border-top-left-radius: 0.25rem;border-bottom-left-radius: 0.25rem;}
   .btn-basic:last-child{border-top-right-radius: 0.25rem;border-bottom-right-radius: 0.25rem;}
+}
+
+.ic-arrow{
+  border: solid;
+  border-width: 0 2px 2px 0;
+  display: inline-block;
+  padding: 2px;
+  transform: rotate(45deg);
 }
 
 /* 기본 테이블 */
