--- a/css/content.scss
+++ b/css/content.scss
@@ -2,10 +2,72 @@
 
 @import "sass-common.scss";
 
+$aside-w:250px;
 #wrapper{
   display: flex;
-  aside{
-    flex-shrink: 0;width: 250px;height: 100vh;border-right: 1px solid #ddd;
-    position: fixed;overflow: auto;
+}
+aside#sidebar{
+  position: fixed;left: 0;top: 0;
+  flex-shrink: 0;width: $aside-w;height: 100vh;border-right: 1px solid #ddd;
+  overflow: auto;background: #293042;
+  .logo-box{width: 100%;height: 80px;
+    @include flex();margin-bottom: 20px;
+  }
+  .nav{
+    a{color: rgba(255,255,255,.7);transition: all 0.2s;
+      &:hover{
+        color: rgba(255,255,255,1);
+        .ic-arrow{color: rgba(255,255,255,1);}
+      }
+      &.on .ic-arrow{transform: rotate(225deg);}
+    }
+    .depth_1{      
+      > li{
+        > a{padding: 0.75rem 1rem;font-size: 14px;          
+          @include flex($j:space-between);
+          .ic-arrow{color: rgba(255,255,255,.7);transition: all 0.2s;}
+          
+        }
+      }
+    }
+    .depth_2{
+      overflow: hidden;
+      height: 0;
+      transition: height 0.2s;
+      transform-origin:top;
+      > li{
+        margin-bottom: 0.5rem;
+        > a{font-size: 13px;padding:0 1rem}
+      }
+    }
+  }
+}
+#container{
+  display: flex;flex-direction: column;
+  background: #f9f9f9;min-height: 100vh;flex: 1;padding-left: $aside-w;
+}
+#content{
+  padding: 2rem;
+}
+
+header#header{
+  padding:1rem 2rem;
+  width: 100%;height: 80px;background: #fff;
+  @include flex($j:space-between);
+  @include bdBot();
+  .search-box{
+    position: relative;    
+    input{width: 100%;padding-right: 50px;}
+    button{width: 40px;height: 100%;position: absolute;right: 0;top: 0;outline: none;}
+    .btn{width: 20px;height: 20px;color: #888; }
+  }
+  .profile{
+    position: relative;
+    .btn{
+      @include flex();
+      .name{display: inline-block;margin-right: 0.7rem;font-size: 1rem;}
+      .ic-arrow{margin-top: -1px;}
+    }
+    .pop-over{right: 0;}
   }
 }
